[gd_scene load_steps=15 format=3 uid="uid://rwcs1rwxgdjk"]

[ext_resource type="Script" path="res://Characters/Enemy/enemy.gd" id="1_fuie3"]
[ext_resource type="Texture2D" uid="uid://c1x36cadyl6g3" path="res://assets/SpaceStationAda/SpaceStation_Projectiles_Sheet.png" id="1_k8udi"]
[ext_resource type="Texture2D" uid="uid://cqm654awc36hf" path="res://assets/Spritesenemy/Boss1.png" id="1_oegkb"]
[ext_resource type="Texture2D" uid="uid://bna6x4c5ck2mh" path="res://assets/Spritesenemy/Boss2.png" id="2_jvawe"]
[ext_resource type="Script" path="res://Characters/Enemy/Attack/tackle_attack.gd" id="2_ylgxo"]
[ext_resource type="Script" path="res://Characters/Enemy/Movement/fly.gd" id="3_3xfbe"]
[ext_resource type="Script" path="res://Life/life.gd" id="4_wyumy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pud2m"]
atlas = ExtResource("1_k8udi")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hawme"]
atlas = ExtResource("1_k8udi")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1qsf"]
atlas = ExtResource("1_k8udi")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1ehp"]
atlas = ExtResource("1_k8udi")
region = Rect2(96, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ie16h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pud2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hawme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1qsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1ehp")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_oegkb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_oegkb")
}, {
"duration": 1.0,
"texture": ExtResource("2_jvawe")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ightj"]
size = Vector2(46, 72)

[sub_resource type="CircleShape2D" id="CircleShape2D_tkqd6"]
radius = 36.0139

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_fuie3")

[node name="Attack" type="Node" parent="."]
script = ExtResource("2_ylgxo")
attack_range = 400

[node name="Movement" type="Node" parent="."]
script = ExtResource("3_3xfbe")
max_dist = 50

[node name="Life" type="Node" parent="."]
script = ExtResource("4_wyumy")
hp = 100

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ie16h")
animation = &"idle"

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ightj")

[node name="HitArea" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_tkqd6")
debug_color = Color(0.976029, 0, 0.414963, 0.42)

[node name="Plataform_Detector" type="RayCast2D" parent="."]
position = Vector2(13, 0)
target_position = Vector2(0, 36)

[node name="Player_Detector" type="RayCast2D" parent="."]
position = Vector2(17, -2)
exclude_parent = false
target_position = Vector2(40, 0)
hit_from_inside = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
